--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,10 @@
             <id>Sponge</id>
             <url>https://repo.spongepowered.org/maven/</url>
         </repository>
-
+        <repository>
+            <id>litarvan</id>
+            <url>https://litarvan.github.io/maven</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -327,6 +330,11 @@
             <version>3.0.6</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/ViaRewind-3.0.6-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>fr.litarvan</groupId>
+            <artifactId>openauth</artifactId>
+            <version>1.1.3</version>
         </dependency>
 
     </dependencies>
